# MyResume

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  resume.yaml  start.sh
.codex/skills/generate-resume/: SKILL.md
docs/: generate-resume-with-skill.md
examples/: lvy.yaml  my_resume.yaml
static/: style.css
templates/: editor.html  resume.html
