[project]
name = "myresume"
version = "0.2.0"
description = "A FastAPI YAML resume editor with print-ready resume output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
